# vspliter

./: README.md  pyproject.toml  split.py
